fix overlap

--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,10 @@ header h6 + p {
     position:relative;
     z-index:1;
     height: 660px;
+
+}
+.work-text{
+    margin-top: 1em;
 }
 #skills {
     margin-top:750px;
@@ -712,12 +716,15 @@ p{
     .header-content{width:70%;}
     header{height:800px !important;}
     .content-small{width:80%;}
-    .content-medium{width:80%;}
+    .content-medium{width:80%;
+        padding: 20px 20px 40px 20px;
+        height: fit-content !important;
+    }
     .content-large{width:80%;}
     h2{font-size:32px; line-height:38px;}
-    .soft-double{padding:40px;}
-    header{height:550px !important;}
-    #work{top:550px !important; width:none;}
+    .soft-double{padding:10px;}
+    header{height:610px !important;}
+    #work{top:615px !important; width:none;}
     
     h1{font-size:55px !important;}
     .soft{padding:20px !important;}
@@ -764,6 +771,7 @@ p{
 /* phone */
 
 @media screen and (max-width: 560px) {
+    p{font-size: 98% !important}
     body{margin:0;}
     header{margin:0 !important;}
     .header-content{width:80%;}
@@ -771,13 +779,13 @@ p{
     .content-small{width:75%;}
     .content-large{width:75%;}
     h2{font-size:24px; line-height:30px;}
-    header{height:550px !important;}
+    header{height:650px !important;}
     h1{font-size:38px !important; line-height:42px;}
     #work{top:0px !important; width:none;}
     #skills{margin-top:0px !important; width:none;}
     #contact {margin-top:0px!important; height:300px !important;}
     .soft-top--quad {padding-top:60px !important;}
-    .soft-double {padding:20px !important;}
+    /* .soft-double {padding:20px !important;} */
     .footer-content {width:100%;}
     .soft-top--sex{padding-top:100px!important;}
     .soft{padding:20px!important;}
@@ -785,10 +793,9 @@ p{
     /* kharasso */
     .large-kharasso{margin-top:0px!important;}
     .large-kharasso-second{height:300px!important;}
-    .work-content{height:500px!important;}
-    /*religio*/
-    /*crew tools*/
-    .gratia-content{height:390px!important;}
+    .work-content{height:fit-content!important;}
+    /*gratia*/
+    .gratia-content{height:390px!important;margin-bottom: 5em;}
     /* notesy */
     .key-row-one,
     .key-row-two {width:100%; height:200px!important;}
@@ -801,6 +808,8 @@ p{
 /* other mobile styles */
 .mobile .site-header { position: relative; }
 .mobile #product { margin-top: 0; }
+.mobile .large-gratia { margin-top: 0; }
+
 
 .icon:before{
     color:grey;
